# PhantomLives

./: .gitignore  CLAUDE.md  drive-stress-test.sh  eject-externals.sh  flatten.py  pdf-to-markdown.md  reboot-quiesce.sh  reboot-safe.sh  release-on-airy.sh  release-secrets-backup.sh  release-secrets-restore.sh  sync-md-to-obsidian.sh
.github/: copilot-instructions.md
CalendarMaker/: .gitignore  CHANGELOG.md  DESIGN.md  HANDOFF.md  README.md  USER_MANUAL.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ContentSubmission/: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  USER_MANUAL.md  com.phantomlives.contentsubmission.plist  content_submission.py  install.sh  manifest.json  manifest.yaml  requirements.txt  run.sh  test_content_submission.py  uninstall.sh
ElectronicDetective/: .gitignore  CHANGELOG.md  README.md  build-app.sh  install.sh  project.yml  run-tests.sh
Epochs/: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  build-app.sh  electron.vite.config.ts  install.sh  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
IRCKit/: .gitignore  CHANGELOG.md  Package.swift  README.md  run-tests.sh
Ircle/: .gitignore  CHANGELOG.md  Package.swift  README.md  RELEASING.md  appcast.xml  build-app.sh  install.sh  run-tests.sh
MacSearchReplace/: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  install.sh
MasterClipper/: .gitignore  CHANGELOG.md  HANDOFF.md  INSTALL.md  README.md  USER_MANUAL.md  build-app.sh  install.sh  project.yml  run-tests.sh
Molly/: .gitignore  CHANGELOG.md  DESIGN.md  HANDOFF.md  INSTALL.md  OUT_OF_SCOPE.md  PHASE_8_PARSERS.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  USER_MANUAL.md  WHATS_NEW_1.10.md  WHATS_NEW_1.13.md  WHATS_NEW_1.29.md  WHATS_NEW_1.31.md  WHATS_NEW_1.32.md  WHATS_NEW_1.33.md  WHATS_NEW_1.34.md  WHATS_NEW_1.35.md  WHATS_NEW_1.8.md  WHATS_NEW_1.9.md  build-app.sh  index.html  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-tests.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
Molly/src-tauri/: Cargo.toml  tauri.conf.json
Molly/src-tauri/capabilities/: default.json
Molly/src-tauri/icons/: icon.icns
Molly/src-tauri/migrations/: 001_init.sql  002_sites.sql  003_taxonomy.sql  004_customers.sql  005_clips.sql  006_schedules.sql  007_income.sql  008_expenses.sql  009_social.sql  010_kinks.sql  011_kinks_preload.sql  012_products_and_customer_fields.sql  013_customer_history.sql  014_customer_sales.sql  015_mollys_log.sql  016_c4s_clips.sql  017_bundles.sql  018_crypto_keystore.sql  019_site_credentials.sql  020_background_jobs.sql  021_keystore_stay_unlocked.sql  022_job_run_log_path.sql  023_notes.sql  024_note_font_size.sql  025_holidays.sql  026_content_tags.sql  027_fanday_tags.sql  028_clip_tags.sql  029_subreddits.sql  030_hours.sql  031_daily_tasks.sql  032_drop_content_release_defaults.sql  033_ui_theme.sql  034_return_file_import.sql  035_social_drops.sql  036_youtube_bundle.sql  037_social_followers.sql  038_bundle_preview_assets.sql  039_youtube_visibility.sql  040_bundle_summary_pdf.sql
Molly/src-tauri/resources/atw-bot/: package.json  repost.js
Molly/src-tauri/src/: attachments.rs  atw.rs  atw_settings.rs  atw_setup.rs  background_jobs.rs  backup.rs  bundle_zip.rs  bundles.rs  c4s.rs  content_tags.rs  daily_tasks.rs  export.rs  fsutil.rs  history.rs  holidays.rs  hours.rs  lib.rs  log.rs  main.rs  masterclipper.rs  notes.rs  reddit.rs  return_file.rs  site_credentials.rs  social_drops.rs  social_followers.rs  sysdiag.rs
Molly/src-tauri/src/crypto/: commands.rs  errors.rs  keychain.rs  keystore.rs  mnemonic.rs  mod.rs  wrap.rs
Molly/src-tauri/src/media/: commands.rs  diagnostics.rs  engine.rs  ffmpeg_path.rs  filters.rs  mod.rs  probe.rs  settings.rs  temp.rs
MusicJournal/: CHANGELOG.md  HANDOFF.md  INSTALL.md  README.md  USER_MANUAL.md  make_icon.py  project.yml
NFEditor/: .gitignore  CHANGELOG.md  README.md  USER_MANUAL.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
PeekServer/: .gitignore  CHANGELOG.md  README.md  config.example.json  install-agent.sh  run.sh
PurpleArchive/: .gitignore  CHANGELOG.md  HANDOFF.md  Package.swift  README.md  RELEASING.md  USER_MANUAL.md  appcast.xml  build-app.sh  install.sh  project.yml  run-tests.sh
PurpleAttic/: .gitignore  CHANGELOG.md  HANDOFF.md  Package.resolved  Package.swift  PurpleAttic.entitlements  README.md  USER_MANUAL.md  build-app.sh  install-sender.sh  install.sh  run-tests.sh
PurpleChef/: .gitignore  CHANGELOG.md  README.md  RELEASING.md  USER_MANUAL.md  build-app.sh  electron.vite.config.ts  install.sh  package-lock.json  package.json  tsconfig.json  tsconfig.web.json
PurpleIRC/: AUDIT.md  (+11 more)
PurpleMind/src-tauri/: Cargo.toml  tauri.conf.json
PurpleMind/src-tauri/capabilities/: default.json
PurpleMind/src-tauri/icons/: icon.icns
PurpleMind/src-tauri/migrations/: 001_init.sql  002_node_items.sql
PurpleMind/src-tauri/src/: backup.rs  export.rs  fsutil.rs  lib.rs  main.rs
SideMolly/src-tauri/: Cargo.toml  tauri.conf.json
SideMolly/src-tauri/capabilities/: default.json
SideMolly/src-tauri/icons/: PLACEHOLDER.md
SideMolly/src-tauri/migrations/: 001_init.sql  002_bundles.sql  003_bundle_files.sql  004_export_thumbs.sql  005_image_ops.sql  006_jobs.sql  007_video_processed_files.sql  008_watermark_per_media.sql  009_bundle_file_rotation.sql  010_jobs_kind_widen.sql  011_auto_assembly_settings.sql  012_processing_log.sql  013_dropbox.sql  014_dropbox_template_default.sql  015_posting.sql  016_posting_assets_and_fansite.sql  017_posting_log.sql  018_bundle_type_widen.sql  019_persona_clips.sql  020_bundle_title_override.sql  021_bundle_completed_at.sql  022_summary_pdf.sql  023_edit_defaults.sql
SideMolly/src-tauri/src/: auto_assemble.rs  backup.rs  bundle_io.rs  bundles.rs  dropbox.rs  extract.rs  fansite.rs  frames.rs  fsutil.rs  images.rs  jobs.rs  lib.rs  main.rs  manifest.rs  persona_clips.rs  post_bundle.rs  posting.rs  processing_log.rs  summary.rs  thumbnails.rs  transcribe.rs  video.rs  watch.rs
(+3338 files in other folders)
