[package]
name = "molly"
version = "1.9.0"
description = "Molly — content creator central hub"
authors = ["Robert Olen <robert.olen@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "molly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
# Direct SQLite access for BLOB-heavy history attachment writes (the
# tauri-plugin-sql JS bridge doesn't support raw byte parameters cleanly).
rusqlite = { version = "0.31", features = ["bundled"] }
# SHA-256 hashing for the Content Bundler (every file in the bundle is
# hashed on upload + re-verified at bundle time; inner/outer ZIPs are
# hashed and the digests recorded in hashes.json).
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
