[package]
name = "molly"
version = "1.20.2"
description = "Molly — content creator central hub"
authors = ["Robert Olen <robert.olen@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "molly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
# Direct SQLite access for BLOB-heavy history attachment writes (the
# tauri-plugin-sql JS bridge doesn't support raw byte parameters cleanly).
rusqlite = { version = "0.31", features = ["bundled"] }
# Used by Notes (Phase 13) for regex search/find on titles + bodies.
regex = "1"
# SHA-256 hashing for the Content Bundler (every file in the bundle is
# hashed on upload + re-verified at bundle time; inner/outer ZIPs are
# hashed and the digests recorded in hashes.json).
sha2 = "0.10"

# Phase 10 keystore. AES-256-GCM wraps a per-install DEK; the DEK is
# wrapped by a KEK derived from the user's passphrase via PBKDF2.
# tiny-bip39 encodes the 32-byte DEK as 24 English words for export.
# Design ported from PurpleIRC/EncryptedJSON; see HANDOFF.
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac", "sha2"] }
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
tiny-bip39 = "1"
base64 = "0.22"
# OS keychain for the "Stay unlocked across restarts" setting. Stores
# the raw DEK in macOS Keychain / Windows Credential Manager / Linux
# Secret Service. Only written when the user opts in; manual lock and
# wipe always purge the entry. Apple-native + sync features off because
# we want the entry local to this machine and accessible without iCloud.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# tokio is already pulled in transitively by tauri; declared here as
# a direct dep so we can `use tokio::time::sleep` in long-running
# background tasks (e.g. crypto::commands::idle_check_loop) and
# tokio::process::Command for spawning the ATW Node bot subprocess.
# Default features kept off because tauri's runtime configuration
# handles them.
tokio = { version = "1", default-features = false, features = ["time", "process", "io-util", "rt", "sync", "macros"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
