[package]
name = "sidemolly"
version = "0.6.0"
description = "SideMolly — Molly bundle workbench"
authors = ["Robert Olen <robert.olen@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sidemolly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Auto-backup zips the entire app_data/ tree on launch.
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
# Used for both the migration smoke test (applies every shipped migration
# to a fresh in-memory SQLite) AND production bundle ingest writes (parallel
# connection at the same `sidemolly.db` path used by tauri-plugin-sql, same
# pattern Molly uses for BLOB-heavy history attachments). Bundled feature
# keeps the binary self-contained (no system libsqlite3 dep).
rusqlite = { version = "0.31", features = ["bundled"] }
# SHA-256 hashing for bundle verification (re-hash inner zip bytes + every
# inner-zip entry, assert == values in hashes.json).
sha2 = "0.10"
# base64 — encode on-disk thumbnail JPEGs as `data:image/jpeg;base64,…`
# URLs. WKWebView on macOS rejected our `asset://localhost/...` URLs
# (diagnostic captured 2026-05-24); data URLs render everywhere
# regardless of the asset-protocol handshake.
base64 = "0.22"
# Image decode + resize for the Phase 1c thumbnail pipeline. Default
# features off because we only need the four common bundle formats —
# everything else stays a glyph fallback. Keeps the bundle binary
# slimmer than the full default codec set.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
# Phase 3 image ops — watermark drawing on top of decoded JPEG/PNG/etc.
# imageproc provides `drawing::draw_text_mut`; ab_glyph rasterizes the
# bundled PaperDaisy.ttf glyphs that the drawing call consumes.
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
# File-system watcher for the watched-folder ingest path. Wraps FSEvents
# on macOS, ReadDirectoryChangesW on Windows, inotify on Linux behind a
# single Result-returning API. Used only from src-tauri/src/watch.rs.
notify = "6"
# Async tokio is already pulled in transitively by tauri; declared here
# so watch.rs can use tokio::time::sleep for FS-event debounce and
# spawn the launch-time + ongoing watcher task. Default features off —
# tauri's runtime configuration sets what we need.
tokio = { version = "1", default-features = false, features = ["time", "rt", "sync", "macros"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
